buildscript {
	ext {
		springIoPlatformVersion = 'Brussels-SR11'
	}

	ext['tomcat.version'] = '7.0.82'

	repositories {
		jcenter()
	}

	dependencies {
		classpath 'io.spring.gradle:dependency-management-plugin:1.0.5.RELEASE'
		classpath 'org.akhikhl.gretty:gretty:2.0.0'
	}
}

apply plugin: 'java-library'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'war'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'org.akhikhl.gretty'

repositories {
	jcenter()
}

group = 'net.shopxx'
version = '6.1.2-RELEASE'
sourceCompatibility = 1.7
targetCompatibility = 1.7

dependencyManagement {
	imports {
		mavenBom "io.spring.platform:platform-bom:${springIoPlatformVersion}"
	}
}

configurations.all {
	exclude group: 'commons-logging', module: 'commons-logging'
	exclude group: 'net.sf.ehcache', module: 'ehcache-core'
}

dependencies {
	compile 'org.springframework:spring-aop'
	compile 'org.springframework:spring-beans'
	compile 'org.springframework:spring-context'
	compile 'org.springframework:spring-context-support'
	compile 'org.springframework:spring-core'
	compile 'org.springframework:spring-expression'
	compile 'org.springframework:spring-jdbc'
	compile 'org.springframework:spring-orm'
	compile 'org.springframework:spring-tx'
	compile 'org.springframework:spring-web'
	compile 'org.springframework:spring-webmvc'
	compile 'org.springframework.mobile:spring-mobile-device'
	compile 'javax.inject:javax.inject'
	compile 'org.hibernate:hibernate-core'
	compile 'org.hibernate:hibernate-entitymanager'
	compile 'org.hibernate:hibernate-validator'
	compile 'org.hibernate:hibernate-search-orm:5.6.1.Final'
	compile 'org.ansj:ansj_seg:5.1.6'
	compile 'org.ansj:ansj_lucene5_plug:5.1.2.0'
	compile 'org.freemarker:freemarker'
	compile 'net.sf.ehcache:ehcache'
	compile 'net.sf.ehcache:ehcache-web:2.0.4'
	compile 'org.apache.shiro:shiro-core:1.3.2'
	compile 'org.apache.shiro:shiro-web:1.3.2'
	compile 'org.apache.shiro:shiro-spring:1.3.2'
	compile 'org.apache.shiro:shiro-ehcache:1.3.2'
	compile 'com.mchange:c3p0'
	compile 'commons-lang:commons-lang'
	compile 'commons-collections:commons-collections'
	compile 'commons-beanutils:commons-beanutils'
	compile 'commons-io:commons-io'
	compile 'commons-net:commons-net'
	compile 'commons-fileupload:commons-fileupload'
	compile 'commons-codec:commons-codec'
	compile 'org.apache.commons:commons-email:1.4'
	compile 'org.apache.commons:commons-compress:1.12'
	compile 'org.apache.oltu.oauth2:org.apache.oltu.oauth2.client:1.0.2'
	compile 'org.apache.httpcomponents:httpclient'
	compile 'org.slf4j:slf4j-api'
	compile 'org.slf4j:jcl-over-slf4j'
	compile 'ch.qos.logback:logback-core'
	compile 'ch.qos.logback:logback-classic'
	compile 'dom4j:dom4j'
	compile 'jaxen:jaxen'
	compile 'com.fasterxml.jackson.core:jackson-core'
	compile 'com.fasterxml.jackson.core:jackson-databind'
	compile 'com.fasterxml.jackson.core:jackson-annotations'
	compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
	compile 'org.jsoup:jsoup:1.9.2'
	compile 'org.jxls:jxls:2.4.3'
	compile 'org.jxls:jxls-poi:1.0.14'
	compile 'org.apache.poi:poi'
	compile 'org.codehaus.groovy:groovy-all'
	compile 'org.im4java:im4java:1.4.0'
	compile 'org.bouncycastle:bcprov-jdk15on:1.51'
	compile 'com.aliyun.oss:aliyun-sdk-oss:2.0.5'
	compile 'com.alipay.sdk:alipay-sdk-java:3.7.4.ALL'
	compile 'org.perf4j:perf4j:0.9.16'
	compile 'org.aspectj:aspectjrt'
	compile 'org.aspectj:aspectjweaver'
	compile 'com.googlecode.log4jdbc:log4jdbc:1.2'
	compile fileTree(dir: 'libs', include: '*.jar')

	testCompile 'junit:junit'
	testCompile 'org.springframework:spring-test'

	runtime 'mysql:mysql-connector-java'
	runtime 'com.microsoft.sqlserver:mssql-jdbc'

	providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
	providedCompile 'javax.servlet:jsp-api:2.0'
}

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
	options.encoding 'UTF-8'
	options.charSet 'UTF-8'
}

gretty {
	jvmArgs = ['-Xmx1024m', '-XX:MaxPermSize=512m']
	servletContainer = 'tomcat7'
	contextPath = '/'
	scanInterval = 0
	inplaceMode = 'hard'
	debugPort = 5005
	debugSuspend = false
}